--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanessa Engler</title>
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="root"></div>
